--- a/vignettes/methylclock.bib
+++ b/vignettes/methylclock.bib
@@ -1,6 +1,6 @@
 @article{mcewen2019pedbe,
   title={The PedBE clock accurately estimates DNA methylation age in pediatric buccal cells},
-  author={McEwen, Lisa M and O’Donnell, Kieran J and McGill, Megan G and Edgar, Rachel D and Jones, Meaghan J and MacIsaac, Julia L and Lin, David Tse Shen and Ramadori, Katia and Morin, Alexander and Gladish, Nicole and others},
+  author={McEwen, Lisa M and O?Donnell, Kieran J and McGill, Megan G and Edgar, Rachel D and Jones, Meaghan J and MacIsaac, Julia L and Lin, David Tse Shen and Ramadori, Katia and Morin, Alexander and Gladish, Nicole and others},
   journal={Proceedings of the National Academy of Sciences},
   pages={201820843},
   year={2019},
