Bohlin clock ---->  se=FALSE

--- a/vignettes/methylclock.bib
+++ b/vignettes/methylclock.bib
@@ -100,11 +100,10 @@
   title={Bayesian neural networks improve methylation age estimates},
   author={Alfonso, Gerardo and Gonzalez, Juan R},
   journal={bioRxiv},
-  volume={XX},
-  number={X},
-  pages={XX},
-  year={2018}
+  year={2020},
+  publisher={Cold Spring Harbor Laboratory}
 }
+
 
 @article{teschendorff2012beta,
   title={A beta-mixture quantile normalization method for correcting probe design bias in Illumina Infinium 450 k DNA methylation data},
