--- a/vignettes/methylclock.bib
+++ b/vignettes/methylclock.bib
@@ -212,3 +212,14 @@
   year={2016},
   publisher={BioMed Central}
 }
+
+@article{lu2019dna,
+  title={DNA methylation-based estimator of telomere length},
+  author={Lu, Ake T and Seeboth, Anne and Tsai, Pei-Chien and Sun, Dianjianyi and Quach, Austin and Reiner, Alex P and Kooperberg, Charles and Ferrucci, Luigi and Hou, Lifang and Baccarelli, Andrea A and others},
+  journal={Aging (Albany NY)},
+  volume={11},
+  number={16},
+  pages={5895},
+  year={2019},
+  publisher={Impact Journals, LLC}
+}
