--- a/vignettes/methylclock.bib
+++ b/vignettes/methylclock.bib
@@ -223,3 +223,14 @@
   year={2019},
   publisher={Impact Journals, LLC}
 }
+
+@article{guintivano2013cell,
+  title={A cell epigenotype specific model for the correction of brain cellular heterogeneity bias and its application to age, brain region and major depression},
+  author={Guintivano, Jerry and Aryee, Martin J and Kaminsky, Zachary A},
+  journal={Epigenetics},
+  volume={8},
+  number={3},
+  pages={290--302},
+  year={2013},
+  publisher={Taylor \& Francis}
+}
