added new Wu clock

--- a/vignettes/methylclock.bib
+++ b/vignettes/methylclock.bib
@@ -1,3 +1,14 @@
+@article{wu2019dna,
+  title={DNA methylation profile is a quantitative measure of biological aging in children},
+  author={Wu, Xiaohui and Chen, Weidan and Lin, Fangqin and Huang, Qingsheng and Zhong, Jiayong and Gao, Huan and Song, Yanyan and Liang, Huiying},
+  journal={Aging (Albany NY)},
+  volume={11},
+  number={22},
+  pages={10031},
+  year={2019},
+  publisher={Impact Journals, LLC}
+}
+
 @article{mcewen2019pedbe,
   title={The PedBE clock accurately estimates DNA methylation age in pediatric buccal cells},
   author={McEwen, Lisa M and O?Donnell, Kieran J and McGill, Megan G and Edgar, Rachel D and Jones, Meaghan J and MacIsaac, Julia L and Lin, David Tse Shen and Ramadori, Katia and Morin, Alexander and Gladish, Nicole and others},
