updated horvath2 to skinHovarth

--- a/vignettes/methylclock.Rmd
+++ b/vignettes/methylclock.Rmd
@@ -38,7 +38,7 @@ This manual describes how to estimate chronological and gestational DNA methylat
 - **Hannum's clock**: It uses 71 CpGs described in @hannum2013genome. It was trained using 450K array in blood samples. Another are-related biomarer is also computed:
      - **AMAR** (Apparent Methylomic Aging Rate): Measure proposed in @hannum2013genome computed as the ratio between DNAm age and the chronological age.
 - **BNN**: It uses Horvath's CpGs to train a Bayesian Neural Network (BNN) to predict DNAm age as described in @alfonso2018.
-- **Horvath's skin+blood clock (Horvath2)**: Epigenetic clock for skin and blood cells. It uses 391 CpGs described in @horvath2018epigenetic. It was trained using 450K EPIC arrays in skin and blood sampels.
+- **Horvath's skin+blood clock (skinHorvath)**: Epigenetic clock for skin and blood cells. It uses 391 CpGs described in @horvath2018epigenetic. It was trained using 450K EPIC arrays in skin and blood sampels.
 - **PedBE clock**: Epigenetic clock from buccal epithelial swabs. It's intended purpose is buccal samples from individuals aged 0-20 years old. It uses 84 CpGs described in @mcewen2019pedbe. The authors gathered 1,721 genome-wide DNAm profiles from 11 different cohorts with individuals aged 0 to 20 years old. 
 - **Wu's clock**: It uses 111 CpGs described in @wu2019dna. It is designed to predict age in children. It was trained using 27K and 450K.
 
@@ -70,14 +70,13 @@ The package depends on some R packages that can be previously installed into you
 library(BiocManager)
 install(c("tidyverse", "impute", "Rcpp"))
 
-library(devtools)
-# install_github("perishky/meffil")
 ```
 
 
 Then `methylclock` package is installed into your computer by executing:
 
 ```{r install_packages, eval=FALSE}
+library(devtools)
 install_github("isglobal-brge/methylclock")
 ``` 
 
@@ -298,12 +297,12 @@ One may be interested in assessing association between chronologial age and DNA 
 
 
 ```{r get_gse58045, echo=FALSE}
-ff <- "c:/juan/CREAL/BayesianPrediction/Bayesian_clock/paper"
-load(file.path(ff, "data/GSE58045.Rdata"))
+# ff <- "c:/juan/CREAL/BayesianPrediction/Bayesian_clock/paper"
+# load(file.path(ff, "data/GSE58045.Rdata"))
 ```
 
 
-```{r get_geo_gse58045, eval=FALSE}
+```{r get_geo_gse58045, eval=TRUE}
 dd <- GEOquery::getGEO("GSE58045")
 gse58045 <- dd[[1]]
 ```
@@ -315,7 +314,6 @@ gse58045
 The chronological age is obtained by using `pData` function from  `Biobase` package that is able to deal with `ExpressionSet` objects:
 
 ```{r age_gse58045}
-library(Biobase)
 pheno <- pData(gse58045)
 age <- as.numeric(pheno$`age:ch1`)
 ``` 
@@ -343,11 +341,11 @@ Let us illustrate how to use DNAmAge information in association studies (e.g cas
 
 
 ```{r get_gse19711, echo=FALSE}
-ff <- "c:/juan/CREAL/BayesianPrediction/Bayesian_clock/paper"
-load(file.path(ff, "data/GSE19711.Rdata"))
+# ff <- "c:/juan/CREAL/BayesianPrediction/Bayesian_clock/paper"
+# load(file.path(ff, "data/GSE19711.Rdata"))
 ```
 
-```{r get_geo_gse19711, eval=FALSE}
+```{r get_geo_gse19711, eval=TRUE}
 dd <- GEOquery::getGEO("GSE19711")
 gse19711 <- dd[[1]]
 ```
@@ -393,10 +391,10 @@ mod.horvath1 <- glm(disease ~ ageAcc.Horvath ,
                    family="binomial")
 summary(mod.horvath1)
 
-mod.horvath2 <- glm(disease ~ ageAcc2.Horvath , 
+mod.skinHorvath <- glm(disease ~ ageAcc2.Horvath , 
                    data=age.gse19711,
                    family="binomial")
-summary(mod.horvath2)
+summary(mod.skinHorvath)
 
 mod.horvath3 <- glm(disease ~ ageAcc3.Horvath , 
                    data=age.gse19711,
@@ -437,11 +435,11 @@ Here we observe as the positive association disapears after adjusting for cell c
 
 
 ```{r get_gse109446, echo=FALSE}
-ff <- "c:/juan/CREAL/BayesianPrediction/Bayesian_clock/paper"
-load(file.path(ff, "data/GSE109446.Rdata"))
+# ff <- "c:/juan/CREAL/BayesianPrediction/Bayesian_clock/paper"
+# load(file.path(ff, "data/GSE109446.Rdata"))
 ```
 
-```{r get_geo_109446, eval=FALSE}
+```{r get_geo_109446, eval=TRUE}
 dd <- GEOquery::getGEO("GSE109446")
 gse109446 <- dd[[1]]
 ```
